# $Id$ $Revision$
## Process this file with automake to produce Makefile.in

htmldir = $(pkgdatadir)/doc/html/info

html_DATA = attrs.html colors.html command.html grammar.html \
	index.html lang.html output.html shapes.html \
	Mcircle.gif Mdiamond.gif Msquare.gif \
	a_box.gif a_crow.gif a_diamond.gif a_dot.gif \
	a_ediamond.gif a_empty.gif a_forward.gif a_halfopen.gif \
	a_inv.gif a_invdot.gif a_invempty.gif a_invodot.gif \
	a_lteeoldiamond.gif a_nohead.gif a_none.gif a_normal.gif \
	a_obox.gif a_odiamond.gif a_odot.gif a_open.gif a_tee.gif \
	aa_box.gif aa_crow.gif aa_diamond.gif aa_dot.gif aa_inv.gif \
	aa_lbox.gif aa_lcrow.gif aa_ldiamond.gif aa_linv.gif aa_lnormal.gif \
	aa_ltee.gif aa_lvee.gif aa_none.gif aa_normal.gif aa_obox.gif \
	aa_odiamond.gif aa_odot.gif aa_oinv.gif aa_olbox.gif \
	aa_oldiamond.gif aa_olinv.gif aa_olnormal.gif aa_onormal.gif \
	aa_orbox.gif aa_ordiamond.gif aa_orinv.gif aa_ornormal.gif \
	aa_rbox.gif aa_rcrow.gif aa_rdiamond.gif aa_rinv.gif \
	aa_rnormal.gif aa_rtee.gif aa_rvee.gif aa_tee.gif aa_vee.gif \
	back.gif both.gif box.gif circle.gif constraint.gif diamond.gif \
	doublecircle.gif doubleoctagon.gif egg.gif ellipse.gif fill.gif \
	forward.gif hexagon.gif house.gif html1.gif html2.gif invhouse.gif \
	invtrapezium.gif invtriangle.gif mrecord.gif nohead.gif octagon.gif \
    none.gif sdlshapes.jpg html3.gif html4.gif \
	parallelogram.gif pentagon.gif plaintext.gif point.gif \
	polygon.gif record.gif rect.gif rectangle.gif round.gif \
	septagon.gif trapezium.gif triangle.gif tripleoctagon.gif

EXTRA_DIST = $(html_DATA)
